[project]
name = "packet-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.7",
    "pyogg>=0.6.14a1",
    "scapy>=2.7.0",
]

[tool.uv.sources]
pyogg = { git = "https://github.com/TeamPyOgg/PyOgg/" }
